// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile failure 1`] = `
<div>
  <div>
    "Error"
  </div>
</div>
`;

exports[`UserProfile loading 1`] = `
<div>
  <b>
    Loading...
  </b>
</div>
`;

exports[`UserProfile success 1`] = `
<div>
  <h2>
    Buckaroo Banzai
  </h2>
</div>
`;
